feat(store) - enable to store m4a and convert to wav